# OpenCVDemo

./: CMakeLists.txt  main.cpp
core/: App.cpp  App.h  CMakeLists.txt
test/: CMakeLists.txt  Demo.cpp  Demo.h
utils/: CMakeLists.txt  ThreadTool.cpp  ThreadTool.h
